snowy-server/snowy-actuator-app/k8s/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowy-actuator-app-ingress
  labels:
    app: snowy-actuator-app
spec:
  ingressClassName: nginx
  rules:
  - host: actuator-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snowy-actuator-app
            port:
              number: 9001
